--- a/default.conf
+++ b/default.conf
@@ -1,12 +1,80 @@
-server {
-    listen 80;
+# server {
+#     listen 80;
+#     server_name _;
 
-    location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
-    }    
+#     location / {
+#         root /usr/share/nginx/html;
+#         try_files $uri $uri/ /index.html;
+#     }  
 
-    location /search {
-        proxy_pass http://backend:3000/search;
-    }
-}
+#     location /search {
+#         proxy_pass http://localhost:3000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     }
+# }
+
+# server {
+#     listen 443 ssl;
+#     server_name _;
+
+#     ssl_certificate /path/to/your/ssl_certificate.crt;
+#     ssl_certificate_key /path/to/your/ssl_certificate_key.key;
+
+#     location / {
+#         root /usr/share/nginx/html;
+#         try_files $uri $uri/ /index.html;
+#     }  
+
+#     location /search {
+#         proxy_pass http://localhost:3000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     }
+# }
+
+# # in development
+# server {
+#     listen 80;
+
+#     location / {
+#         root /usr/share/nginx/html;
+#         try_files $uri $uri/ /index.html;
+#     }
+
+#     # resolver 169.254.169.253 valid=10s;  # AWS DNS resolver IP  
+
+#     location /search {
+#         resolver 127.0.0.11 valid=30s;  # ECS internal DNS resolver
+#         proxy_pass http://backend:3000/search;  # can change to localhost
+#         proxy_redirect default;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+
+#         # CORS headers for /search location
+#         add_header 'Access-Control-Allow-Origin' '*';
+#         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+#         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range';
+#         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+#     }
+# }
+
+
+
+# works on local
+# server {
+#     listen 80;
+
+#     location / {
+#         root /usr/share/nginx/html;
+#         try_files $uri $uri/ /index.html;
+#     }    
+
+#     location /search {
+#         proxy_pass http://backend:3000/search;  # change backend to localhost to get working in ecs
+#     }
+# }
