--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,9 @@ services:
       - backend
     environment:
       - REACT_APP_BACKEND_URL=http://backend:3000
+      - APP_HOST=backend
+      - APP_PORT=3000
+      - VPC_CIDR=localhost
 
   backend:
     build:
