--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,12 +12,12 @@
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
-      "noEmit": true,
+      "noEmit": false,
       "jsx": "react-jsx",
       "outDir": "./dist",
       "rootDir": "./src"
     },
-    "include": ["src/**/*"],
+    "include": ["src/**/*", "src/server", "src/server.ts"],
     "exclude": ["node_modules"]
 }
   
