--- a/frontend/nginx.conf.template
+++ b/frontend/nginx.conf.template
@@ -41,6 +41,10 @@ http {
     } 
 
     location /search {
+        # Reject requests with unsupported HTTP method
+        if ($request_method !~ ^(GET)$) { 
+          return 405;
+        }
         proxy_pass http://${APP_HOST}:${APP_PORT}/search;
 
         proxy_http_version 1.1;
@@ -55,6 +59,10 @@ http {
     }
 
     location /like {
+        # Reject requests with unsupported HTTP method
+        if ($request_method !~ ^(POST)$) { 
+          return 405;
+        }
         proxy_pass http://${APP_HOST}:${APP_PORT}/like; 
 
         proxy_http_version 1.1;
@@ -69,7 +77,29 @@ http {
     }
 
     location /unlike {
+        # Reject requests with unsupported HTTP method
+        if ($request_method !~ ^(POST)$) { 
+          return 405;
+        }
         proxy_pass http://${APP_HOST}:${APP_PORT}/unlike;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_cache_bypass $http_upgrade;
+        proxy_busy_buffers_size   128k;
+        proxy_buffers   4 128k;
+        proxy_buffer_size   64k;
+    }
+
+    location /get_liked {
+        # Reject requests with unsupported HTTP method
+        if ($request_method !~ ^(GET)$) { 
+          return 405;
+        }
+        proxy_pass http://${APP_HOST}:${APP_PORT};
 
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
@@ -132,6 +162,26 @@ http {
     }
 
     location /unlike {
+      # Reject requests with unsupported HTTP method
+      if ($request_method !~ ^(POST)$) {
+        return 405;
+      }
+
+      # host/ip where the app is (host w/ be 'localhost' except in ?? situations)
+      proxy_pass http://${APP_HOST}:${APP_PORT};
+
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_cache_bypass $http_upgrade;
+      proxy_busy_buffers_size   128k;
+      proxy_buffers   4 128k;
+      proxy_buffer_size   64k;
+    }
+
+    location /get_liked {
       # Reject requests with unsupported HTTP method
       if ($request_method !~ ^(POST)$) {
         return 405;
