--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,7 +8,7 @@
       "allowSyntheticDefaultImports": true,
       "strict": true,
       "forceConsistentCasingInFileNames": true,
-      "module": "commonjs", //"esnext",
+      "module": "commonjs", 
       "moduleResolution": "node",
       "resolveJsonModule": true,
       "isolatedModules": true,
